--- a/src/Starbucks.Application/Starbucks.Application.csproj
+++ b/src/Starbucks.Application/Starbucks.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Starbucks.Persistence\Starbucks.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Categories\" />
+  </ItemGroup>
+
 </Project>
